# fire_dolphin_assignment

./: README.md
backend/: .env.example  API_ENDPOINTS.md  docker-compose.yml  main.py  pyproject.toml
backend/src/: server.py
backend/src/config/: postgres_config.py  qdrant_config.py  rabbitmq_config.py  s3_config.py
backend/src/controllers/chats/: main.py
backend/src/controllers/ingest/: main.py
backend/src/models/: __init__.py
backend/src/models/chats/: chats.py  messages.py
backend/src/models/ingest/: metadata.py  repository.py
backend/src/repositories/chats/: chats.py  messages.py
backend/src/repositories/ingest/: metadata.py  repository.py
backend/src/schemas/: chats.py  ingest.py
backend/src/services/chat_service/: main.py
backend/src/services/chunk_service/: main.py
backend/src/services/git_service/: main.py
backend/src/services/github_service/: main.py
backend/src/services/ingestion_service/: main.py
backend/src/services/llm_service/: main.py
backend/src/services/qdrant_service/: main.py
backend/src/services/queue_service/: main.py
backend/src/services/queue_service/worker_service/: main.py
backend/src/services/s3_service/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/pages/: Chat.tsx  Home.tsx
