[project]
name = "backend"
version = "0.1.0"
description = "GitHub Repository Intelligence Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.43.6",
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "gitpython>=3.1.50",
    "kombu>=5.4.2",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=1.58.0",
    "psycopg2-binary>=2.9.10",
    "pygithub>=2.9.1",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.49",

]
